# ImmersiveSpellcastingVR

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ComplexityReduction.md  Debug.bat  README.bbcode  README.md  TODOs.md  action_plan.md  vcpkg.json  xmake.lua
dumps/animationgraphs/: DefaultMale.txt  FirstPerson.txt
mod_data/meshes/actors/character/_1stperson/animations/: docs.md  mlh_preaimedcon.xml  mlh_preselfcon.xml  mlh_pretelekinesis.xml  mlh_release.xml  mlh_selfprecharge.xml  mrh_preaimedcon.xml  mrh_pretelekinesis.xml  mrh_prewardcharge.xml  mrh_prewardloop.xml  mrh_selfprecharge.xml
mod_data_source/meshes/actors/character/_1stperson/animations/: docs.md  mlh_precharge.xml  mlh_prewardcharge.xml  mlh_prewardloop.xml  mrh_precharge.xml  mrh_preselfcon.xml  mrh_release.xml
mod_data_source/scripts/: ImmersiveCastingVR_Config.psc  ImmersiveCastingVR_MCM.psc
mod_data_static/: ISPVR.esp  ImmersiveCastingVR.esp
mod_data_static/SKSE/Plugins/: ImmersiveSpellcastingVR.ini
papyrus/: ImmersiveCastingVR_Config.psc  ImmersiveCastingVR_Helpers.psc  ImmersiveCastingVR_MCM.psc
scripts/: compile_papyrus.bat  compile_papyrus.cmd  compile_papyrus_mo2.bat  compile_papyrus_mo2.cmd  kill_skyrimvr.bat  start_skyrimvr.bat
scripts/blub/scripts/: ImmersiveCastingVR_Config.pex
src/: ActionAllowedHook.cpp  ActionAllowedHook.h  AllowShoutWhileCasting.cpp  AllowShoutWhileCasting.h  AttackState.cpp  AttackState.h  AttackTicker.cpp  AttackTicker.h  CMakeLists.txt  CasterStateTracker.cpp  CasterStateTracker.h  ConfigManager.cpp  ConfigManager.h  HandOrientation.h  InputDispatcher.cpp  InputDispatcher.h  InputInterceptor.cpp  InputInterceptor.h  InstantCharge.cpp  InstantCharge.h  PCH.h  Settings.cpp  Settings.h  SpellChargeTracker.cpp  SpellChargeTracker.h  haptics.cpp  haptics.h  main.cpp  sksevr_api.h  util.cpp  util.h  utils.cpp  utils.h
src/compat/: HIGGS.cpp  HIGGS.h  HapticSkyrimVR.cpp  HapticSkyrimVR.h  HapticSkyrimVRinterface001.h  hapticSkyrimVRinterface001.cpp
src/hooks/: ActorMagicCaster.cpp  ActorMagicCaster.h
src/utils/: Animation.cpp  Animation.h  BinaryPatcher.cpp  BinaryPatcher.h  Console.cpp  Console.h  EventHandler.h  GameState.cpp  GameState.h  Input.cpp  Input.h  LogUtils.cpp  LogUtils.h  MessageBox.cpp  MessageBox.h  Setup.cpp  Setup.h  TimedWorker.cpp  TimedWorker.h
